refactor funcionando en clientes-service
cambio en test desde postman para pegarle al gateway seteado en el puerto 8080